--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,49 +1,11 @@
-# Docker
 - task: aquasecScanner@4
   inputs:
     image: 'centos:latest'
-    scanType: 'local'
-    register: false
+    scanType: 'hosted'
+    register: true
     hideBase: false
     showNegligible: false
     windowsScannerVersion: '4.2.0'
-    registry: 'docker hub'
-    connection: 'AquaConnection'
-- task: aquasecScanner@4
-  inputs:
-    image: 'centos:latest'
-    scanType: 'local'
-    register: false
-    hideBase: false
-    showNegligible: false
-    windowsScannerVersion: '4.2.0'
-    registry: 'Docker Hub'
-    connection: 'Aqua Demo Console'
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
-trigger:
-- master
-
-resources:
-- repo: self
-
-variables:
-  tag: '$(Build.BuildId)'
-
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+    scanner: 'registry.aquasec.com/scanner:6.5'
+    registry: 'https://docker.io'
+    connection: 'AquaConsole-Scanner'
