Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -30,5 +30,5 @@ steps:
     showNegligible: false
     windowsScannerVersion: '4.2.0'
     scanner: 'registry.aquasec.com/scanner:6.5'
-    registry: 'Docker Hub'
+    registry: 'Docker'
     connection: 'AquaConsole-Scanner-ADM-ESE'
