Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,10 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
-
+- task: Docker@2
+  inputs:
+    containerRegistry: 'Aqua Registry'
+    command: 'login'
 - task: aquasecScanner@4
   inputs:
     image: 'centos:latest'
