--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -32,6 +32,6 @@ steps:
     showNegligible: false
     windowsScannerVersion: '4.2.0'
     scanner: 'registry.aquasec.com/scanner:6.5'
-    runOptions: '-e AQUA_TOKEN=61ce5875ccd5e024bf51b1c9a4cf3534522f3d9b'
+    runOptions: '-e AQUA_TOKEN=----'
     registry: 'Docker'
     connection: 'AquaScannerSaaS'
